# vkrender2

./: '  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  0  CMakeLists.txt  CMakePresets.json  README.md  clean_spirv.sh  compile.sh  imgui.ini
apps/: CMakeLists.txt
apps/demo1/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
apps/demo2/: App.cpp  App.hpp  CMakeLists.txt
resources/: resources.h.glsl
resources/shaders/: common.h.glsl  cull_objects.comp.glsl  cull_objects_common.h.glsl  fullscreen_quad.vert.glsl  geometry_common.h.glsl  material.h.glsl  math.h.glsl  resources.h.glsl  shadow_depth.frag.glsl  shadow_depth.vert.glsl  shadow_depth_common.h.glsl  vertex_common.h.glsl
resources/shaders/animation/: skinning.comp.glsl
resources/shaders/anti_alias/fxaa/: fxaa.comp.glsl  fxaa.frag.glsl
resources/shaders/debug/: basic.frag.glsl  basic.vert.glsl  basic2.frag.glsl  basic2.vert.glsl  basic3.frag.glsl  basic3.vert.glsl  basic_common.h.glsl  clear_img.comp.glsl  clear_img_common.h.glsl  depth_debug.frag.glsl  test.glsl
resources/shaders/downsample/: up_down_sample.frag.glsl
resources/shaders/gbuffer/: gbuffer.frag.glsl  gbuffer.vert.glsl  gbuffer_common.h.glsl  shade.comp.glsl  shade_common.h.glsl
resources/shaders/ibl/: cube_convolute.comp.glsl  cube_convolute.frag.glsl  cube_convolute.vert.glsl  cube_convolute_raster_common.h.glsl  eq_to_cube.comp.glsl  eq_to_cube_comp_common.h.glsl  equirect_to_cube.frag.glsl  equirect_to_cube.vert.glsl  equirect_to_cube_common.h.glsl  integrate_brdf.comp.glsl  prefilter_env_map.frag.glsl  prefilter_env_map.vert.glsl  prefilter_env_map_common.h.glsl
resources/shaders/lines/: draw_line.frag.glsl  draw_line.vert.glsl  draw_line_common.h.glsl
resources/shaders/oit/: oit.comp.glsl  transparent.frag.glsl  transparent.vert.glsl  transparent_common.h.glsl
resources/shaders/pbr/: pbr.h.glsl
resources/shaders/postprocess/: postprocess.comp.glsl  postprocess.frag.glsl
resources/shaders/shadows/: shadows.h.glsl
resources/shaders/skybox/: skybox.frag.glsl  skybox.vert.glsl  skybox_common.h.glsl
resources/shaders/ssao/: ssao_1.comp.glsl  ssao_blur.comp.glsl
src/: AABB.hpp  Animation.hpp  AnimationManager.cpp  AnimationManager.hpp  App.cpp  App.hpp  BaseRenderer.cpp  BaseRenderer.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CommandEncoder.cpp  CommandEncoder.hpp  Common.hpp  FixedVector.hpp  IBL.cpp  IBL.hpp  Input.hpp  Logger.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphUtil.cpp  RenderGraphUtil.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneResources.hpp  StateTracker.cpp  StateTracker.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.hpp  Types.hpp  VkRender2.cpp  VkRender2.hpp  main.cpp
src/core/: FixedVector.hpp  Flags.hpp  Timer.hpp
src/techniques/: CSM.cpp  CSM.hpp  IBL.cpp  IBL.hpp
src/util/: BitOps.hpp  CVar.cpp  CVar.hpp  FileWatcher.cpp  FileWatcher.hpp  IndexAllocator.cpp  IndexAllocator.hpp  MathUtil.hpp  StringUtil.hpp
src/vk2/: BindlessResourceAllocator.cpp  BindlessResourceAllocator.hpp  Buffer.cpp  Buffer.hpp  Definitions.cpp  DeletionQueue.cpp  DeletionQueue.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Fence.cpp  Fence.hpp  Handle.hpp  Hash.hpp  Initializers.cpp  Initializers.hpp  PipelineManager.cpp  PipelineManager.hpp  Pool.hpp  Rendering.cpp  Rendering.hpp  Resource.cpp  Resource.hpp  SamplerCache.cpp  SamplerCache.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  StagingBufferPool.cpp  StagingBufferPool.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  VkCommon.cpp  VkCommon.hpp  VkTypes.cpp  VkTypes.hpp
