cmake_minimum_required(VERSION 3.24)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_STANDARD_INCLUDE_DIRECTORIES ${CMAKE_CXX_IMPLICIT_INCLUDE_DIRECTORIES})
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(vkrender2)

if(APPLE)
    enable_language(OBJC)
endif()
add_subdirectory(third_party)

add_subdirectory(src)

add_subdirectory(apps)

set(VKRENDER2_VALIDATION_LAYERS_ENABLED_DEFAULT ON)
if (CMAKE_BUILD_TYPE STREQUAL "Release")
    set(VKRENDER2_VALIDATION_LAYERS_ENABLED_DEFAULT OFF)
endif()
